--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dgfx-rc-bot",
-  "version": "1.0.0",
-  "description": "DGFX Race Control Bot",
+  "name": "ivra-rc-bot",
+  "version": "2.0.0",
+  "description": "IVRA Race Control Bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +9,6 @@
   "author": "Kyle",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "discord.js": "^14.3.0"
   }
 }
